<resources>
    <string name="app_name">School Desk</string>
    <string name="page_title">Sign In</string>
    <string name="hello_this_is_dashboard">Hello! This is Dashboard.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Below strings are for navigation_menu.xml file -->
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_timetable">Time Table</string>
    <string name="menu_attendance">Attendance</string>
    <string name="menu_exam">Exam Schedule</string>
    <string name="menu_result">Results</string>
    <string name="menu_communicate">Communicate</string>
    <string name="menu_change_pass">Change Password</string>
    <string name="menu_logout">Log Out</string>
    <string name="school_desk">School Desk</string>
    <string name="school_address">School Address</string>

    <!-- Below strings are sources for SharedPreferences -->
    <string name="pref_file">com.example.preference_file</string>
    <string name="pref_login_status">com.example.preference_login_status</string>
    <string name="pref_user_name">com.example.preference_user_name</string>
    <string name="pref_session_id">com.example.preference_session_id</string>
    <string name="pref_account_type">com.example.preference_account_type</string>

    <!-- Below sourced for Login page -->
    <string name="user_name">USER NAME</string>
    <string name="password">PASSWORD</string>
    <string name="sign_in">sign in</string>
    <string name="trouble_message">Trouble Sign in? Click here</string>
    <string name="login_image">Login Image</string>
    <string name="visibility_string">For visibility of password</string>
    <string name="enter_registered_mobile_number">Enter Registered Mobile Number</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sun_txt">Sun</string>
    <string name="mon_txt">Mon</string>
    <string name="tue_txt">Tue</string>
    <string name="wed_txt">Wed</string>
    <string name="thu_txt">Thu</string>
    <string name="fri_txt">Fri</string>
    <string name="sat_txt">Sat</string>
    <string name="last_date">30</string>
    <string name="time_schedule">time</string>
    <string name="subject_schedule">Subject</string>
    <string name="teacher_schedule">teacher</string>
    <string name="get_otp">GET OTP</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="submit">SUBMIT</string>
    <string name="enter_existing_password">ENTER EXISTING PASSWORD</string>
    <string name="enter_new_password">ENTER NEW PASSWORD</string>
    <string name="re_enter_new_password">RE-ENTER NEW PASSWORD</string>
    <string name="change_password">CHANGE PASSWORD</string>
    <string name="show_result">Show Result</string>
    <string name="exam_name">Exam Name</string>
    <string name="regular_exam">Regular Exam</string>
    <string name="date_5_apr">Date: 5 apr</string>
    <string name="class_5_b">Class: 5-B</string>
    <string name="mathematics">Mathematics</string>
    <string name="subject">Subject:</string>
    <string name="profile_photo">Profile Photo</string>
    <string name="total_scored">Total Scored</string>
    <string name="subject_appeared">Subject Appeared</string>
    <string name="result">Result</string>
    <string name="percentage">Percentage</string>
    <string name="subject_s">Subject(s)</string>
    <string name="add_event">ADD Event</string>
    <string name="current_date">Current Date</string>
    <string name="attendance_taken">Attendance Taken</string>
    <string name="image_desc">School Photo</string>
    <string name="no_subject_string">No Subjects to display!</string>

</resources>
