<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="8dp"
            android:layout_height="match_parent"
            android:background="#00ACC1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:ignore="RtlSymmetry">

            <TextView
                android:id="@+id/text_exam_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/exam_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="25sp" />

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:text="@string/regular_exam" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="#00ACC1" />

            <TextView
                android:id="@+id/text_class"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:text="@string/class_5_b" />

            <TextView
                android:id="@+id/text_exam_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:text="@string/date_5_apr" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="12dp"
                android:text="@string/subject"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/subject_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingStart="14dp"
                tools:layout_editor_absoluteY="117dp" />

            <TextView
                android:id="@+id/text_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00ACC1"
                android:text="@string/show_result"
                android:textAlignment="center"
                android:textColor="#FBF8F8"
                android:textSize="25sp" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>