<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@android:color/transparent"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        android:background="@android:color/transparent">

        <TextView
            android:id="@+id/subject"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-smallcaps"
            android:textAlignment="viewStart"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textSize="20sp"
            android:textStyle="bold"
            android:typeface="normal"
            tools:text="@string/subject_schedule"
            android:background="@android:color/transparent"
            />
        <!--
        <ImageView
            android:id="@+id/image_view"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@mipmap/ic_launcher"/>-->
        <TextView
            android:id="@+id/text_view_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_schedule"
            android:drawablePadding="8dp"
            android:text="@string/time_schedule"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:background="@android:color/transparent"/>

        <TextView
            android:id="@+id/text_view_likes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teacher_schedule"
            android:textSize="15sp"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</androidx.cardview.widget.CardView>